--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -1,13 +1,12 @@
 name: hello-world
 
-on: push
+on: repository_dispatch
 
-jobs: 
+jobs:
   hello-world-job:
-
     runs-on: ubuntu-latest
 
     steps:
       - name: check out repository code
-        uses: action/checkout@v4
+        uses: actions/checkout@v2
       - run: echo "$(cat hello_world.txt)"
